getting this working with sentinal div

--- a/intersection-observer/index.html
+++ b/intersection-observer/index.html
@@ -8,7 +8,10 @@
 
 <body>
   
-  <div class="long-div"><img src="pickle.png" alt="" class="pickle-ping"></div>
+  <div class="long-div">
+    <div class="sticky-sentinal"><!--DOM element for triggering the intersection observer event--></div>
+    <img src="pickle.png" alt="" class="pickle-ping">
+  </div>
 
   <script src="js/scripts.js"></script>
 </body>
