--- a/intersection-observer/index.html
+++ b/intersection-observer/index.html
@@ -9,7 +9,9 @@
 <body>
   
   <div class="long-div">
-    <div class="sticky-sentinel"><!--DOM element for triggering the intersection observer event--></div>
+    <!-- <div class="sticky-sentinel"> -->
+      <!--DOM element for triggering the intersection observer event-->
+    <!-- </div> -->
     <img src="pickle.png" alt="" class="pickle-ping">
   </div>
 
