--- a/intersection-observer/index2.html
+++ b/intersection-observer/index2.html
@@ -9,9 +9,10 @@
 <body>
   
   <div class="long-div">
+    <div class="sticky-sentinel"><!--DOM element for triggering the intersection observer event--></div>
     <img src="pickle.png" alt="" class="pickle-ping">
   </div>
 
-  <script src="js/scripts.js"></script>
+  <script src="js/scripts2.js"></script>
 </body>
 </html>
