updating image file name

--- a/intersection-observer/index.html
+++ b/intersection-observer/index.html
@@ -9,7 +9,7 @@
 <body>
   
   <div class="long-div">
-    <img src="pickle.png" alt="" class="pickle-ping">
+    <img src="pickle.png" alt="" class="pickle-png">
   </div>
 
   <script src="js/scripts.js"></script>
