--- a/intersection-observer/index2.html
+++ b/intersection-observer/index2.html
@@ -10,7 +10,7 @@
   
   <div class="long-div">
     <div class="sticky-sentinel"><!--DOM element for triggering the intersection observer event--></div>
-    <img src="pickle.png" alt="" class="pickle-ping">
+    <img src="pickle.png" alt="" class="pickle-png">
   </div>
 
   <script src="js/scripts2.js"></script>
