--- a/local-storage/index.html
+++ b/local-storage/index.html
@@ -12,7 +12,7 @@
     <h1>New Tab App</h1>
 
     <form>
-      <input id="item" type="text" placeholder="New" required />
+      <input type="text" placeholder="Add Item then hit Enter!" required />
     </form>
     
     <h2>Items</h2>
