--- a/vue-starter/index.html
+++ b/vue-starter/index.html
@@ -12,21 +12,20 @@
   
   <div id="app">
     
-    <p>VueJS is pretty cool - {{ YOUR_NAME }} ({{ AGE }})</p>
-
-    <p>My age, multiplied by three: {{ AGE * 3 }}</p>
-
-    <p>Here is a funciton that outputs a random float: {{ randomFloat() }}</p>
-
+    <a href="" v-on:click.prevent="increase(10)">Click Me!</a>
+    <p>{{ counter }}</p>
+    <p style="background: #e5e5e5; padding: 50px;" v-on:mousemove="updateCoordinates">
+      Coordinates: {{ x }} / {{ y }}
+      <span style="background: red; padding: 20px;" v-on:mousemove.stop="">DEAD SPOT</span>
+    </p>
     <div>
-      <img style="width:100px;height:100px" v-bind:src="image">
+      <input type="text" v-on:keyup.enter.space="alert" />
     </div>
+    <hr>
+    <p>super dynamic value: {{ value }}</p>
+    <p><input type="text" v-on:keyup.enter="updateValue($event); counter+=10" /></p>
 
-    <div>
-      <input type="text" v-bind:value="YOUR_NAME">
-  </div>
-
-  </div>
+   </div> 
 
   <script src="js/scripts.js"></script>
 </body>
