--- a/loading-animations/index.html
+++ b/loading-animations/index.html
@@ -56,7 +56,56 @@
       <div class="dot-flashing"></div>
     </div>
 
-    <div class="dot-box"></div>
+    <div class="dot-box dots-07">
+      <div class="dot-bricks"></div>
+    </div>
+
+    <div class="dot-box dots-08">
+      <div class="dot-carousel"></div>
+    </div>
+
+    <div class="dot-box dots-09">
+      <div class="dot-typing"></div>
+    </div>
+
+    <div class="dot-box dots-10">
+      <div class="dot-windmill"></div>
+    </div>
+
+    <div class="dot-box dots-11">
+      <div class="dot-falling"></div>
+    </div>
+
+    <div class="dot-box dots-12">
+      <div class="sk-folding-cube">
+        <div class="sk-cube1 sk-cube"></div>
+        <div class="sk-cube2 sk-cube"></div>
+        <div class="sk-cube4 sk-cube"></div>
+        <div class="sk-cube3 sk-cube"></div>
+      </div>
+    </div>
+
+    <div class="dot-box dots-13">
+      <div class="spinner">
+        <div class="bounce1"></div>
+        <div class="bounce2"></div>
+        <div class="bounce3"></div>
+      </div>
+    </div>
+
+    <div class="dot-box dots-14">
+      <div class="sk-cube-grid">
+        <div class="sk-cube sk-cube1"></div>
+        <div class="sk-cube sk-cube2"></div>
+        <div class="sk-cube sk-cube3"></div>
+        <div class="sk-cube sk-cube4"></div>
+        <div class="sk-cube sk-cube5"></div>
+        <div class="sk-cube sk-cube6"></div>
+        <div class="sk-cube sk-cube7"></div>
+        <div class="sk-cube sk-cube8"></div>
+        <div class="sk-cube sk-cube9"></div>
+      </div>
+    </div>
 
   </div>
 
