--- a/loading-animations/index.html
+++ b/loading-animations/index.html
@@ -12,6 +12,7 @@
   <div class="dot-container">
 
     <div class="dot-box dots-01">
+      <span class="dot-box__indicator">1</span>
       <ul class="loading">
         <li class="s1"></li>
         <li class="s2"></li>
@@ -20,6 +21,7 @@
     </div>
 
     <div class="dot-box dots-02">
+      <span class="dot-box__indicator">2</span>
       <div class="loader">
         <div class="duo duo1">
           <div class="dot dot-a"></div>
@@ -33,10 +35,12 @@
     </div>
 
     <div class="dot-box dots-03">
+      <span class="dot-box__indicator">3</span>
       <div class="c-three-dots-loader"></div>
     </div>
 
     <div class="dot-box dots-04">
+      <span class="dot-box__indicator">4</span>
       <div class="vertical-centered-box">
         <section>
         <div class="loader-2">
@@ -49,34 +53,42 @@
     </div>
 
     <div class="dot-box dots-05">
+      <span class="dot-box__indicator">5</span>
       <div class="dot-pulse"></div>
     </div>
 
     <div class="dot-box dots-06">
+      <span class="dot-box__indicator">6</span>
       <div class="dot-flashing"></div>
     </div>
 
     <div class="dot-box dots-07">
+      <span class="dot-box__indicator">7</span>
       <div class="dot-bricks"></div>
     </div>
 
     <div class="dot-box dots-08">
+      <span class="dot-box__indicator">8</span>
       <div class="dot-carousel"></div>
     </div>
 
     <div class="dot-box dots-09">
+      <span class="dot-box__indicator">9</span>
       <div class="dot-typing"></div>
     </div>
 
     <div class="dot-box dots-10">
+      <span class="dot-box__indicator">10</span>
       <div class="dot-windmill"></div>
     </div>
 
     <div class="dot-box dots-11">
+      <span class="dot-box__indicator">11</span>
       <div class="dot-falling"></div>
     </div>
 
     <div class="dot-box dots-12">
+      <span class="dot-box__indicator">12</span>
       <div class="sk-folding-cube">
         <div class="sk-cube1 sk-cube"></div>
         <div class="sk-cube2 sk-cube"></div>
@@ -86,6 +98,7 @@
     </div>
 
     <div class="dot-box dots-13">
+      <span class="dot-box__indicator">13</span>
       <div class="spinner">
         <div class="bounce1"></div>
         <div class="bounce2"></div>
@@ -94,6 +107,7 @@
     </div>
 
     <div class="dot-box dots-14">
+      <span class="dot-box__indicator">14</span>
       <div class="sk-cube-grid">
         <div class="sk-cube sk-cube1"></div>
         <div class="sk-cube sk-cube2"></div>
