comparing performance on mobile device between left/translateX/translate3D

--- a/loading-animations/index-02.html
+++ b/loading-animations/index-02.html
@@ -8,8 +8,20 @@
 
 <body>
   
-  <div class="dots">
+  <div class="dots dots--01">
     <span class="dots__dot"></span>
+  </div>
+
+  <div class="dots dots--02">
+    <div class="dots__dot-wrapper">
+      <span class="dots__dot"></span>
+    </div>
+  </div>
+
+  <div class="dots dots--03">
+    <div class="dots__dot-wrapper">
+      <span class="dots__dot"></span>
+    </div>
   </div>
 
   <script src="js/scripts.js"></script>
