polishing up the animation to match Lottie

--- a/loading-animations/index-02.html
+++ b/loading-animations/index-02.html
@@ -4,24 +4,15 @@
   <meta charset="utf-8">
   <title>Loading Animations</title>
   <link rel="stylesheet" href="css/styles-02.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
   
   <div class="dots dots--01">
-    <span class="dots__dot"></span>
-  </div>
-
-  <div class="dots dots--02">
-    <div class="dots__dot-wrapper">
-      <span class="dots__dot"></span>
-    </div>
-  </div>
-
-  <div class="dots dots--03">
-    <div class="dots__dot-wrapper">
-      <span class="dots__dot"></span>
-    </div>
+    <span class="dots__dot dots__dot--01"></span>
+    <span class="dots__dot dots__dot--02"></span>
+    <span class="dots__dot dots__dot--03"></span>
   </div>
 
   <script src="js/scripts.js"></script>
