getting lottie and pure css solutions on same page

--- a/lottie-animations/index.html
+++ b/lottie-animations/index.html
@@ -10,6 +10,12 @@
   
   <div id="app"></div>
 
+  <div class="dots dots--01">
+    <span class="dots__dot dots__dot--01"></span>
+    <span class="dots__dot dots__dot--02"></span>
+    <span class="dots__dot dots__dot--03"></span>
+  </div>
+
   <script src="js/lottie.js"></script>
   <script src="js/scripts.js"></script>
 </body>
