finishing up styles before moving them over to app

--- a/loading-animations/index-02.html
+++ b/loading-animations/index-02.html
@@ -9,10 +9,16 @@
 
 <body>
   
-  <div class="dots dots--01">
-    <span class="dots__dot dots__dot--01"></span>
-    <span class="dots__dot dots__dot--02"></span>
-    <span class="dots__dot dots__dot--03"></span>
+  <div class="dots">
+  
+    <div class="dots__label">Your page is loading</div>
+
+    <div class="dots__container">
+      <span class="dots__dot dots__dot--01"></span>
+      <span class="dots__dot dots__dot--02"></span>
+      <span class="dots__dot dots__dot--03"></span>
+    </div>
+
   </div>
 
   <script src="js/scripts.js"></script>
