--- a/vue-starter/index.html
+++ b/vue-starter/index.html
@@ -17,7 +17,14 @@
       <button @click="value += 5">Add 5</button>
       <button @click="value += 1">Add 1</button>
       <p>{{ result }}</p>
-  </div>
+    </div>
+
+    <div class="demo" :style="myStyle"></div>
+    <div class="demo" :style="myStyle"></div>
+    <div class="demo" :style="myStyle"></div>
+
+    <input type="text" v-model="color" />
+    <input type="text" v-model="width" />
 
    </div> 
 
