--- a/vue-mastery-intro/index.html
+++ b/vue-mastery-intro/index.html
@@ -9,8 +9,44 @@
 
 <body>
   
+  <div class="nav-bar"></div>
   
+  <div id="app">
+    <div class="product">
+      
+      <div class="product-image">
+        <img :src="image">
+      </div>
 
+      <div class="product-info">
+
+        <h1>{{ product }}</h1>
+        <p v-if="inventory > 10">In Stock</p>
+        <p v-else-if="inventory <= 10 && inventory > 0">Almost Sold Out!</p>
+        <p v-else>Out of Stock</p>
+        <p v-if="onSale">ON SALE!</p>
+
+        <ul>
+          <li v-for="detail in details">{{ detail }}</li>
+        </ul>
+
+        <div v-for="variant in variants" :key="variant.variantId">
+          <p>{{ variant.variantColor }}</p>
+        </div>
+
+        <div>
+          <p>Available in these sizes:</p>
+          <ul>
+            <li v-for="size in sizes">{{ size }}</li>
+          </ul>
+        </div>
+
+      </div>
+
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="js/scripts.js"></script>
 </body>
 </html>
