--- a/vue-mastery-intro/index.html
+++ b/vue-mastery-intro/index.html
@@ -30,15 +30,21 @@
           <li v-for="detail in details">{{ detail }}</li>
         </ul>
 
-        <div v-for="variant in variants" :key="variant.variantId">
-          <p>{{ variant.variantColor }}</p>
-        </div>
-
         <div>
           <p>Available in these sizes:</p>
           <ul>
             <li v-for="size in sizes">{{ size }}</li>
           </ul>
+        </div>
+
+        <div v-for="variant in variants" :key="variant.variantId">
+          <p @mouseover="updateProduct(variant.variantImage)">{{ variant.variantColor }}</p>
+        </div>
+
+        <button @click="addToCart">Add to Cart</button>
+
+        <div class="cart">
+          <p>Cart ({{ cart }})</p>
         </div>
 
       </div>
