finished lesson six

--- a/vue-mastery-intro/index.html
+++ b/vue-mastery-intro/index.html
@@ -23,7 +23,10 @@
         <h1>{{ product }}</h1>
         <p v-if="inventory > 10">In Stock</p>
         <p v-else-if="inventory <= 10 && inventory > 0">Almost Sold Out!</p>
-        <p v-else>Out of Stock</p>
+        <p
+          v-else
+          :class="{ 'out-of-stock': !inStock }"
+        >Out of Stock</p>
         <p v-if="onSale">ON SALE!</p>
 
         <ul>
@@ -37,11 +40,23 @@
           </ul>
         </div>
 
-        <div v-for="variant in variants" :key="variant.variantId">
-          <p @mouseover="updateProduct(variant.variantImage)">{{ variant.variantColor }}</p>
+        <div
+          v-for="variant in variants"
+          :key="variant.variantId"
+          class="color-box"
+          :style="{ backgroundColor: variant.variantColor }"
+          @mouseover="updateProduct(variant.variantImage)"
+        >
         </div>
 
-        <button @click="addToCart">Add to Cart</button>
+        <div class="button-wrap">
+          <button
+            @click="addToCart"
+            :disabled="!inStock"
+            :class="{ disabledButton: !inStock }"
+          >Add to Cart</button>
+          <button @click="removeFromCart">Remove from Cart</button>
+        </div>
 
         <div class="cart">
           <p>Cart ({{ cart }})</p>
