completed computed properties lesson

--- a/vue-mastery-intro/index.html
+++ b/vue-mastery-intro/index.html
@@ -20,15 +20,14 @@
 
       <div class="product-info">
 
-        <h1>{{ product }}</h1>
-        <p v-if="inventory > 10">In Stock</p>
-        <p v-else-if="inventory <= 10 && inventory > 0">Almost Sold Out!</p>
+        <h1>{{ title }}</h1>
+        <p v-if="inStock">In Stock</p>
         <p
           v-else
           :class="{ 'out-of-stock': !inStock }"
         >Out of Stock</p>
-        <p v-if="onSale">ON SALE!</p>
-
+        
+        <p v-if="onSaleMsg">{{ onSaleMsg }}</p>
         <ul>
           <li v-for="detail in details">{{ detail }}</li>
         </ul>
@@ -41,11 +40,11 @@
         </div>
 
         <div
-          v-for="variant in variants"
+          v-for="(variant, index) in variants"
           :key="variant.variantId"
           class="color-box"
           :style="{ backgroundColor: variant.variantColor }"
-          @mouseover="updateProduct(variant.variantImage)"
+          @mouseover="updateProduct(index)"
         >
         </div>
 
