--- a/firebase/index.html
+++ b/firebase/index.html
@@ -9,17 +9,17 @@
 
 <body>
   
-  <h1>Welcome to My Awesome App</h1>
-  <div id="firebaseui-auth-container"></div>
-  <div id="loader">Loading...</div>
+  <form class="add-movie">
+    <div>Title: <input type="text" name="title" class="add-movie__title"></div>
+    <div>Year: <input type="text"  name="year" class="add-movie__year"></div>
+    <div>Director: <input type="text" name="director" class="add-movie__director"></div>
+    <input type="submit" class="add-movie__btn">
+  </form>
 
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
   <!-- Add SDKs for Firebase products that you want to use -->
-  <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
-  <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
-  <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
   <script>
     // Your web app's Firebase configuration
     const firebaseConfig = {
