finished components lesson (again)

--- a/vue-mastery-intro/index.html
+++ b/vue-mastery-intro/index.html
@@ -12,58 +12,7 @@
   <div class="nav-bar"></div>
   
   <div id="app">
-    <div class="product">
-      
-      <div class="product-image">
-        <img :src="image">
-      </div>
-
-      <div class="product-info">
-
-        <h1>{{ title }}</h1>
-        <p v-if="inStock">In Stock</p>
-        <p
-          v-else
-          :class="{ 'out-of-stock': !inStock }"
-        >Out of Stock</p>
-        
-        <p v-if="onSaleMsg">{{ onSaleMsg }}</p>
-        <ul>
-          <li v-for="detail in details">{{ detail }}</li>
-        </ul>
-
-        <div>
-          <p>Available in these sizes:</p>
-          <ul>
-            <li v-for="size in sizes">{{ size }}</li>
-          </ul>
-        </div>
-
-        <div
-          v-for="(variant, index) in variants"
-          :key="variant.variantId"
-          class="color-box"
-          :style="{ backgroundColor: variant.variantColor }"
-          @mouseover="updateProduct(index)"
-        >
-        </div>
-
-        <div class="button-wrap">
-          <button
-            @click="addToCart"
-            :disabled="!inStock"
-            :class="{ disabledButton: !inStock }"
-          >Add to Cart</button>
-          <button @click="removeFromCart">Remove from Cart</button>
-        </div>
-
-        <div class="cart">
-          <p>Cart ({{ cart }})</p>
-        </div>
-
-      </div>
-
-    </div>
+    <product :premium="premium"></product>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
