--- a/firebase/index.html
+++ b/firebase/index.html
@@ -16,6 +16,8 @@
     <input type="submit" class="add-movie__btn">
   </form>
 
+  <ul class="movies"></ul>
+
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
   <!-- Add SDKs for Firebase products that you want to use -->
