--- a/vue-intro-css-tricks/index.html
+++ b/vue-intro-css-tricks/index.html
@@ -2,15 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Boilerplate</title>
+  <title>Intro to Vue.js</title>
   <link rel="stylesheet" href="css/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
   
-  
+  <div id="app">
+    
+    {{ text }} Nice to meet Vue.
 
+    <hr>
+    
+    <ul>
+      <li v-for="item in items">{{ item }}</li>
+    </ul>
+
+    <hr>
+
+    <h3>Type here:</h3>
+    <textarea v-model="message" rows="5"></textarea>
+    <br>
+    <p>{{ message }}</p>
+
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="js/scripts.js"></script>
 </body>
 </html>
