dot animations with Web Animations API

--- a/web-animations-api/index.html
+++ b/web-animations-api/index.html
@@ -9,7 +9,13 @@
 
 <body>
   
-  
+  <div class="dot-wrapper">
+    <div class="dot-container">
+      <span class="dot dot--01"></span>
+      <span class="dot dot--02"></span>
+      <span class="dot dot--03"></span>
+    </div>
+  </div>
 
   <script src="js/scripts.js"></script>
 </body>
