--- a/svg-animation/index.html
+++ b/svg-animation/index.html
@@ -38,6 +38,15 @@
     </svg>
   </div>
 
+  <div class="dot-wrapper">
+    <span class="dot-label">Web Animations API</span>
+    <div class="dot-container">
+      <span class="dot-waapi dot-waapi--01"></span>
+      <span class="dot-waapi dot-waapi--02"></span>
+      <span class="dot-waapi dot-waapi--03"></span>
+    </div>
+  </div>
+
   <script src="js/scripts.js"></script>
 </body>
 </html>
