--- a/firebase2/index.html
+++ b/firebase2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Boilerplate</title>
+  <title>Firebase!</title>
   <link rel="stylesheet" href="css/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -11,6 +11,24 @@
   
   
 
+  <!-- Core Firebase JS SDK -->
+  <script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-app.js"></script>
+  <!-- SDKs for Firebase products -->
+  <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
+  <script>
+    // Firebase configuration
+    var firebaseConfig = {
+      apiKey: "AIzaSyCN_1-Oe_PLTXfR3e4Z8zeFIyKsG-6dBrw",
+      authDomain: "oscars-2021.firebaseapp.com",
+      databaseURL: "https://oscars-2021-default-rtdb.firebaseio.com",
+      projectId: "oscars-2021",
+      storageBucket: "oscars-2021.appspot.com",
+      messagingSenderId: "861066941311",
+      appId: "1:861066941311:web:90e533e74165ed42a7804a"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+  </script>
   <script src="js/scripts.js"></script>
 </body>
 </html>
