--- a/firebase2/dominic/PSu7yLoWmD/index.html
+++ b/firebase2/dominic/PSu7yLoWmD/index.html
@@ -30,6 +30,6 @@
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
   </script>
-  <script src="/js/scripts.js"></script>
+  <script type="module" src="/js/scripts.js"></script>
 </body>
 </html>
