using intersectionObserver while detecting scroll direction

--- a/intersection-observer/index3.html
+++ b/intersection-observer/index3.html
@@ -7,7 +7,15 @@
 </head>
 
 <body>
-  
+
+  <nav aria-label="main navigation">
+    <div class="banner banner01">[ top banner ]</div>
+    <div class="nav-wrapper">
+      <div class="banner banner02 fixed">[ primary nav ]</div>
+      <div class="banner banner03">[ secondary nav ]</div>
+    </div>
+  </nav>
+
   <div class="long-div">
     <img src="pickle.png" alt="" class="pickle-png">
   </div>
