adding form to add movies to firebase backend

--- a/firebase-auth/index2.html
+++ b/firebase-auth/index2.html
@@ -13,6 +13,23 @@
 
   <ul id="movies"><li>movies here...</li></ul>
 
+  <hr>
+
+  <form>
+    <div>
+      <label for="title">Title</label>
+      <input type="text" name="title" id="title">
+    </div>
+    <div>
+      <label for="director">Director</label>
+      <input type="text" name="director" id="director">
+    </div>
+    <div>
+      <label for="year">Year</label>
+      <input type="text" name="year" id="year">
+    </div>
+  </form>
+
   <button id="addMovieButton">Add New Movie</button>
 
   <hr>
