adding clipping paths

--- a/clip-path/index.html
+++ b/clip-path/index.html
@@ -9,7 +9,16 @@
 
 <body>
   
-  
+  <div class="img-wrapper">
+    <a href=""><img src="img/the-simpsons.jpeg" class="clip-me" /></a>
+    <div class="mask-border"></div>
+  </div>
+
+  <hr />
+
+  <div class="placeholder clip-me">
+    <div class="mask-border"></div>
+  </div>
 
   <script src="js/scripts.js"></script>
 </body>
