swapping out the src of the iframe on click to start vi from beginning with mute off and controls showing

--- a/youtube-player-api/index.html
+++ b/youtube-player-api/index.html
@@ -13,8 +13,11 @@
     <iframe id="realmax-iframe"
       class="shogun-video-embed shogun-lazyloaded"
       allow="autoplay"
-      src="https://www.youtube.com/embed/bfctwig1HUQ?enablejsapi=1&start=0&end=0&autoplay=1&loop=1&mute=1&playlist=bfctwig1HUQ&version=3&rel=0"
+      src="https://www.youtube.com/embed/bfctwig1HUQ?enablejsapi=1&start=0&end=0&autoplay=1&loop=1&mute=1&version=3&rel=0&controls=0"
       frameborder="0"
+      width="800"
+      height="400"
+      data-sam="weeeeee"
     ></iframe>
   </div>
 
@@ -23,6 +26,8 @@
   <div>
     <button id="btnRestart">Click me to play from beginning!</button>
     <button id="btnUnmute">Click me to unmute!</button>
+    <button id="btnControls">Click me to show controls!</button>
+    <button id="btnSwapUrl">Click me to swap URL....? 🙏</button>
   </div>
 
   <script src="js/scripts.js"></script>
