first ever container query

--- a/container-queries/index.html
+++ b/container-queries/index.html
@@ -2,14 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Sandbox</title>
+  <title>Container Queries</title>
   <link rel="stylesheet" href="css/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
   
-  <h1>Sandbox!</h1>
+  <h1>Container Queries!</h1>
+
+  <div class="wrapper">
+
+    <div class="card">[ card ]</div>
+
+  </div>
 
   <script src="js/scripts.js"></script>
 </body>
