doing the promises and fetch tuts

--- a/go-make-things-async/index.html
+++ b/go-make-things-async/index.html
@@ -2,14 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Sandbox</title>
+  <title>Promises, Fetch and async/await</title>
   <link rel="stylesheet" href="css/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
   
-  <h1>Sandbox!</h1>
+  <h1>Promises, Fetch and async/await!</h1>
+
+  <div id="counter">0</div>
+
+  <hr />
 
   <script src="js/scripts.js"></script>
 </body>
