for...each with nodelist

--- a/es6-for-everyone/iterables-and-looping.html
+++ b/es6-for-everyone/iterables-and-looping.html
@@ -11,6 +11,12 @@
   
   <h1>ES6 For Everyone!</h1>
 
+  <p>Hello I'm a P tag! 01</p>
+  <p>Hello I'm a P tag! 02</p>
+  <p>Hello I'm a P tag! 03</p>
+  <p>Hello I'm a P tag! 04</p>
+  <p>Hello I'm a P tag! 05</p>
+
   <script src="js/iterables-and-looping.js"></script>
 </body>
 </html>
