--- a/es6-for-everyone/spread-rest.html
+++ b/es6-for-everyone/spread-rest.html
@@ -5,11 +5,35 @@
   <title>ES6 For Everyone!</title>
   <link rel="stylesheet" href="css/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <style>
+    body {
+      min-height: 100vh;
+      font-family: sans-serif;
+      background: #ffc600;
+      text-transform: uppercase;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 50px;
+      color:white;
+      text-shadow: 3px 3px 0 rgba(0,0,0,0.2);
+    }
+    .jump span {
+      display: inline-block;
+      transition: transform 0.2s;
+      cursor:url('https://csscursor.info/santahand.fbeeee9f.png'), default;
+    }
+    .jump span:hover {
+      transform: translateY(-20px) rotate(10deg) scale(2);
+    }
+  </style>
+
 </head>
 
 <body>
-  
-  <h1>ES6 For Everyone!</h1>
+
+  <h2 class="jump">SPREADS!</h2>
 
   <script src="js/spread-rest.js"></script>
 </body>
