more spread examples

--- a/es6-for-everyone/spread-rest.html
+++ b/es6-for-everyone/spread-rest.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
-    body {
+    .spread-wrapper {
       min-height: 100vh;
       font-family: sans-serif;
       background: #ffc600;
@@ -33,7 +33,16 @@
 
 <body>
 
-  <h2 class="jump">SPREADS!</h2>
+  <div class="spread-wrapper">
+    <h2 class="jump">SPREADS!</h2>
+  </div>
+
+  <div class="people">
+    <p>Sam</p>
+    <p>Dom</p>
+    <p>Bianca</p>
+    <p>Archer</p>
+  </div>
 
   <script src="js/spread-rest.js"></script>
 </body>
