--- a/es6-for-everyone/spread-rest.html
+++ b/es6-for-everyone/spread-rest.html
@@ -44,6 +44,6 @@
     <p>Archer</p>
   </div>
 
-  <script src="js/spread-rest.js"></script>
+  <script src="js/spread-rest-02.js"></script>
 </body>
 </html>
