messing with maps and weak maps

--- a/es6-for-everyone/maps-weak-maps.html
+++ b/es6-for-everyone/maps-weak-maps.html
@@ -12,6 +12,12 @@
   <h1>ES6 For Everyone!</h1>
   <h2>Maps and Weak Maps</h2>
 
+  <button>Snakes 🐍</button>
+  <button>Cry 😂</button>
+  <button>Ice Cream 🍦</button>
+  <button>Flamin' 🔥</button>
+  <button>Dancer 💃</button>
+
   <script src="js/maps-weak-maps.js"></script>
 </body>
 </html>
