--- a/es6-for-everyone/async-await-flow-control.html
+++ b/es6-for-everyone/async-await-flow-control.html
@@ -12,6 +12,8 @@
   <h1>ES6 For Everyone!</h1>
   <h2>Async + Await Flow Control</h2>
 
+  <video controls class="sam-cam"></video>
+
   <script src="js/async-await-flow-control.js"></script>
 </body>
 </html>
