scroll progress bar with zero JS woooot

--- a/scroll-driven-animation/index.html
+++ b/scroll-driven-animation/index.html
@@ -10,6 +10,7 @@
 <body>
   
   <h1>Scroll-driven Animation!</h1>
+  <p>Scroll away...</p>
 
   <main id="top">
     <div style="height: 5000px;"><!-- some content here --></div>
@@ -17,6 +18,8 @@
       Scroll to top
     </a>
   </main>
+
+  <div class="progress-bar"></div>
 
   <script src="js/scripts.js"></script>
 </body>
