the further adventures of scroll-driven animation

--- a/scroll-driven-animation/index.html
+++ b/scroll-driven-animation/index.html
@@ -13,13 +13,49 @@
   <p>Scroll away...</p>
 
   <main id="top">
-    <div style="height: 5000px;"><!-- some content here --></div>
+    <div style="height: 5000px;"></div>
     <a href="#top" class="scroll-to-top">
       Scroll to top
     </a>
   </main>
 
   <div class="progress-bar"></div>
+
+  <div class="random-box-01">
+    <div class="random-box-01__bar"></div>
+    <div class="random-box-01__bar"></div>
+  </div>
+
+  <div class="random-box-02">
+    <span>Scroll me...</span>
+    <ul>
+      <li>List Item One</li>
+      <li>List Item Two</li>
+      <li>List Item Three</li>
+      <li>List Item Four</li>
+      <li>List Item Five</li>
+      <li>List Item Six</li>
+      <li>List Item Seven</li>
+      <li>List Item eight</li>
+      <li>List Item Nine</li>
+      <li>List Item Ten</li>
+      <li>List Item One</li>
+      <li>List Item Two</li>
+      <li>List Item Three</li>
+      <li>List Item Four</li>
+      <li>List Item Five</li>
+      <li>List Item Six</li>
+      <li>List Item Seven</li>
+      <li>List Item eight</li>
+      <li>List Item Nine</li>
+      <li>List Item Ten</li>
+    </ul>
+  </div>
+
+  <div class="random-box-03">
+    <span>...to scroll me!</span>
+    <div class="random-box-03__inner">jkhdfgjdgfajkshfgjashdgfjashdgfkajsdhfgkjasdhgfakjfghkjasdhgfajksdhfgjasdhfgkajsdfgakjsdfgakjsdfhgakjsdfhgkajsdfgkajsdfgjkasdfgkajsdgfkjasdhgfkjasdfgakjsdhgfakjsdgfkajsdhfgkadjsfgakjsdfgajkdsf</div>
+  </div>
 
   <script src="js/scripts.js"></script>
 </body>
