messing with timeline-scope

--- a/scroll-driven-animation/index.html
+++ b/scroll-driven-animation/index.html
@@ -26,36 +26,40 @@
     <div class="random-box-01__bar"></div>
   </div>
 
-  <div class="random-box-02">
-    <span>Scroll me...</span>
-    <ul>
-      <li>List Item One</li>
-      <li>List Item Two</li>
-      <li>List Item Three</li>
-      <li>List Item Four</li>
-      <li>List Item Five</li>
-      <li>List Item Six</li>
-      <li>List Item Seven</li>
-      <li>List Item eight</li>
-      <li>List Item Nine</li>
-      <li>List Item Ten</li>
-      <li>List Item One</li>
-      <li>List Item Two</li>
-      <li>List Item Three</li>
-      <li>List Item Four</li>
-      <li>List Item Five</li>
-      <li>List Item Six</li>
-      <li>List Item Seven</li>
-      <li>List Item eight</li>
-      <li>List Item Nine</li>
-      <li>List Item Ten</li>
-    </ul>
-  </div>
+  <section class="scroll-timeline-wrapping-parent">
+  
+    <div class="random-box-02">
+      <span>Scroll me...</span>
+      <ul>
+        <li>List Item One</li>
+        <li>List Item Two</li>
+        <li>List Item Three</li>
+        <li>List Item Four</li>
+        <li>List Item Five</li>
+        <li>List Item Six</li>
+        <li>List Item Seven</li>
+        <li>List Item eight</li>
+        <li>List Item Nine</li>
+        <li>List Item Ten</li>
+        <li>List Item One</li>
+        <li>List Item Two</li>
+        <li>List Item Three</li>
+        <li>List Item Four</li>
+        <li>List Item Five</li>
+        <li>List Item Six</li>
+        <li>List Item Seven</li>
+        <li>List Item eight</li>
+        <li>List Item Nine</li>
+        <li>List Item Ten</li>
+      </ul>
+    </div>
 
-  <div class="random-box-03">
-    <span>...to scroll me!</span>
-    <div class="random-box-03__inner">jkhdfgjdgfajkshfgjashdgfjashdgfkajsdhfgkjasdhgfakjfghkjasdhgfajksdhfgjasdhfgkajsdfgakjsdfgakjsdfhgakjsdfhgkajsdfgkajsdfgjkasdfgkajsdgfkjasdhgfkjasdfgakjsdhgfakjsdgfkajsdhfgkadjsfgakjsdfgajkdsf</div>
-  </div>
+    <div class="random-box-03">
+      <span>...to scroll me!</span>
+      <div class="random-box-03__inner"></div>
+    </div>
+
+  </section>
 
   <script src="js/scripts.js"></script>
 </body>
