getting numbers snapping into position

--- a/spinny-numbers/index.html
+++ b/spinny-numbers/index.html
@@ -2,14 +2,59 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Sandbox</title>
+  <title>Spinny Numbers!</title>
   <link rel="stylesheet" href="css/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
   
-  <h1>Sandbox!</h1>
+  <h1>Spinny Numbers!</h1>
+
+  <h3>Whack three random numbers into the query string! ☝️☝️</h3>
+
+  <div class="num-wrapper">
+    
+    <div class="num-column num-column--1">
+      <div class="num">0</div>
+      <div class="num">1</div>
+      <div class="num">2</div>
+      <div class="num">3</div>
+      <div class="num">4</div>
+      <div class="num">5</div>
+      <div class="num">6</div>
+      <div class="num">7</div>
+      <div class="num">8</div>
+      <div class="num">9</div>
+    </div>
+
+    <div class="num-column num-column--2">
+      <div class="num">0</div>
+      <div class="num">1</div>
+      <div class="num">2</div>
+      <div class="num">3</div>
+      <div class="num">4</div>
+      <div class="num">5</div>
+      <div class="num">6</div>
+      <div class="num">7</div>
+      <div class="num">8</div>
+      <div class="num">9</div>
+    </div>
+
+    <div class="num-column num-column--3">
+      <div class="num">0</div>
+      <div class="num">1</div>
+      <div class="num">2</div>
+      <div class="num">3</div>
+      <div class="num">4</div>
+      <div class="num">5</div>
+      <div class="num">6</div>
+      <div class="num">7</div>
+      <div class="num">8</div>
+      <div class="num">9</div>
+    </div>
+
+  </div>
 
   <script src="js/scripts.js"></script>
 </body>
