getting numbers from form instead of query string so the page doesn't refresh when we get new numbers; making number boxes larger

--- a/spinny-numbers/index.html
+++ b/spinny-numbers/index.html
@@ -11,7 +11,13 @@
   
   <h1>Spinny Numbers!</h1>
 
-  <h3>Whack three random numbers into the query string! ☝️☝️</h3>
+  <h3>
+    Whack three random single digits in!
+    <input type="number" value="0" min="0" max="9" />
+    <input type="number" value="0" min="0" max="9" />
+    <input type="number" value="0" min="0" max="9" />
+    <button>Go!</button>
+  </h3>
 
   <div class="num-wrapper">
     
