fixing container query so it works properly; adding instruction to user

--- a/container-queries/index.html
+++ b/container-queries/index.html
@@ -11,6 +11,8 @@
   
   <h1>Container Queries!</h1>
 
+  <p>Drag the viewport until the red container is less than 400px, and we can then start styling it's child container based on that!</p>
+
   <div class="wrapper">
 
     <div class="card">[ card ]</div>
