outputting viewport width for testing purposes

--- a/utopia-fluid-resposive/index.html
+++ b/utopia-fluid-resposive/index.html
@@ -2,14 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Sandbox</title>
+  <title>Utopia Fluid Responsive Design</title>
   <link rel="stylesheet" href="css/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
   
-  <h1>Sandbox!</h1>
+  <h1>Utopia Fluid Responsive Design</h1>
+
+  <div>
+    Viewport Width:
+    <strong id="viewportWidth"></strong>
+  </div>
 
   <script src="js/scripts.js"></script>
 </body>
