first pass at fluid type

--- a/utopia-fluid-resposive/index.html
+++ b/utopia-fluid-resposive/index.html
@@ -16,6 +16,27 @@
     <strong id="viewportWidth"></strong>
   </div>
 
+  <hr>
+
+  <div class="copy">
+	<h1>Headline Text Here</h1>
+	<p>blah blah</p>
+	<p>blah blah</p>
+	<p>blah blah</p>
+	<h2>Subhead Text goes here this is an H2 tag</h2>
+	<p>blah blah</p>
+	<p>blah blah</p>
+	<p>blah blah</p>
+	<h3>Subhead Text goes here this is an H3 tag</h3>
+	<p>blah blah</p>
+	<p>blah blah</p>
+	<p>blah blah</p>
+	<h4>Subhead Text goes here this is an H4 tag</h4>
+	<p>blah blah</p>
+	<p>blah blah</p>
+	<p>blah blah</p>
+  </div>
+
   <script src="js/scripts.js"></script>
 </body>
 </html>
