adding and tweaking fluid type

--- a/utopia-fluid-resposive/index.html
+++ b/utopia-fluid-resposive/index.html
@@ -19,22 +19,25 @@
   <hr>
 
   <div class="copy">
-	<h1>Headline Text Here</h1>
-	<p>blah blah</p>
-	<p>blah blah</p>
-	<p>blah blah</p>
-	<h2>Subhead Text goes here this is an H2 tag</h2>
-	<p>blah blah</p>
-	<p>blah blah</p>
-	<p>blah blah</p>
-	<h3>Subhead Text goes here this is an H3 tag</h3>
-	<p>blah blah</p>
-	<p>blah blah</p>
-	<p>blah blah</p>
-	<h4>Subhead Text goes here this is an H4 tag</h4>
-	<p>blah blah</p>
-	<p>blah blah</p>
-	<p>blah blah</p>
+	<h1>Headline Text Here (Step 5)</h1>
+	<p>Baseline paragraph text (Step 0)</p>
+	<p></p>You forgot your sausage and mash. Absolutely brassic - Yer 'aving a larf! Having a good rabbit and pork, Get your ones on, we're heading off to the local! Get up those Apples and to bed! He's full of porkies.</p>
+	<p>You forgot your sausage and mash. Absolutely brassic - Yer 'aving a larf! Having a good rabbit and pork, Get your ones on, we're heading off to the local! Get up those Apples and to bed! He's full of porkies.</p>
+	<p>You forgot your sausage and mash. Absolutely brassic - Yer 'aving a larf! Having a good rabbit and pork, Get your ones on, we're heading off to the local! Get up those Apples and to bed! He's full of porkies.</p>
+	<h2>Subhead Text goes here this is an H2 tag (Step 4)</h2>
+	<p>You forgot your sausage and mash. Absolutely brassic - Yer 'aving a larf! Having a good rabbit and pork, Get your ones on, we're heading off to the local! Get up those Apples and to bed! He's full of porkies.</p>
+	<p>You forgot your sausage and mash. Absolutely brassic - Yer 'aving a larf! Having a good rabbit and pork, Get your ones on, we're heading off to the local! Get up those Apples and to bed! He's full of porkies.</p>
+	<p>You forgot your sausage and mash. Absolutely brassic - Yer 'aving a larf! Having a good rabbit and pork, Get your ones on, we're heading off to the local! Get up those Apples and to bed! He's full of porkies.</p>
+	<h3>Subhead Text goes here this is an H3 tag (Step 3)</h3>
+	<p>You forgot your sausage and mash. Absolutely brassic - Yer 'aving a larf! Having a good rabbit and pork, Get your ones on, we're heading off to the local! Get up those Apples and to bed! He's full of porkies.</p>
+	<p>You forgot your sausage and mash. Absolutely brassic - Yer 'aving a larf! Having a good rabbit and pork, Get your ones on, we're heading off to the local! Get up those Apples and to bed! He's full of porkies.</p>
+	<p>You forgot your sausage and mash. Absolutely brassic - Yer 'aving a larf! Having a good rabbit and pork, Get your ones on, we're heading off to the local! Get up those Apples and to bed! He's full of porkies.</p>
+	<h4>Subhead Text goes here this is an H4 tag (Step 2)</h4>
+	<p>You forgot your sausage and mash. Absolutely brassic - Yer 'aving a larf! Having a good rabbit and pork, Get your ones on, we're heading off to the local! Get up those Apples and to bed! He's full of porkies.</p>
+	<p>You forgot your sausage and mash. Absolutely brassic - Yer 'aving a larf! Having a good rabbit and pork, Get your ones on, we're heading off to the local! Get up those Apples and to bed! He's full of porkies.</p>
+	<p>You forgot your sausage and mash. Absolutely brassic - Yer 'aving a larf! Having a good rabbit and pork, Get your ones on, we're heading off to the local! Get up those Apples and to bed! He's full of porkies.</p>
+	<div><small>And small text goes here! (Step -1)</small></div>
+	<div><small><span>And even smaller text goes here! (Step -2)</span></small></div>
   </div>
 
   <script src="js/scripts.js"></script>
