--- a/three-js/index.html
+++ b/three-js/index.html
@@ -5,12 +5,18 @@
   <title>Three.js!</title>
   <link rel="stylesheet" href="css/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script type="importmap">
+	{
+	  "imports": {
+		"three": "https://cdn.jsdelivr.net/npm/three@v0.165.0/build/three.module.js",
+		"three/addons/": "https://cdn.jsdelivr.net/npm/three@v0.165.0/examples/jsm/"
+	  }
+	}
+  </script>
 </head>
 
 <body>
-  
-  <h1>My first three.js app</h1>
 
-  <script src="js/scripts.js"></script>
+  <script src="js/scripts.js" type="module"></script>
 </body>
 </html>
