mucking about with text

--- a/three-js/index.html
+++ b/three-js/index.html
@@ -17,6 +17,8 @@
 
 <body>
 
-  <script src="js/scripts.js" type="module"></script>
+	<div id="info">Description</div>
+
+	<script src="js/scripts.js" type="module"></script>
 </body>
 </html>
