--- a/vertical-progress-slider/index.html
+++ b/vertical-progress-slider/index.html
@@ -2,14 +2,54 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Sandbox</title>
+  <title>Vertical Progress Slider</title>
   <link rel="stylesheet" href="css/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
   
-  <h1>Sandbox!</h1>
+  <h1>Vertical Progress Slider!</h1>
+
+  <hr />
+
+  <div class="vps">
+	<div class="vps__scrollbar">[ scrollbar ]</div>
+	
+	<div class="vps__content">
+		<div class="vps__content-eyebrow">Our Offerings</div>
+		<div class="vps__content-scroll-area">
+			<h2>Premier Club Fitting Experience</h2>
+			<p>Experience precision and instant gratification with our club fitting services. Enjoy on-site crafting, immediate testing, and expert fitters backed by advanced technology.</p>
+			<ul>
+				<li>100+ years of fitting experience.</li>
+				<li>On-site custom club crafting.</li>
+				<li>Immediate testing and adjustments.</li>
+				<li>Advanced technology: Quintic, Trackman, GEARS, Zen Green Stage.</li>
+				<li>Fittings for all club types.</li>
+			</ul>
+			<p>Experience precision and instant gratification with our club fitting services. Enjoy on-site crafting, immediate testing, and expert fitters backed by advanced technology.</p>
+			<ul>
+				<li>100+ years of fitting experience.</li>
+				<li>On-site custom club crafting.</li>
+				<li>Immediate testing and adjustments.</li>
+				<li>Advanced technology: Quintic, Trackman, GEARS, Zen Green Stage.</li>
+				<li>Fittings for all club types.</li>
+			</ul>
+			<p>Experience precision and instant gratification with our club fitting services. Enjoy on-site crafting, immediate testing, and expert fitters backed by advanced technology.</p>
+			<ul>
+				<li>100+ years of fitting experience.</li>
+				<li>On-site custom club crafting.</li>
+				<li>Immediate testing and adjustments.</li>
+				<li>Advanced technology: Quintic, Trackman, GEARS, Zen Green Stage.</li>
+				<li>Fittings for all club types.</li>
+			</ul>
+			<button>CTA Test &#8594;</button>
+		</div>
+	</div>
+	
+	<div class="vps__image"><img src="/img/kramer.png" alt="" /></div>
+  </div>
 
   <script src="js/scripts.js"></script>
 </body>
