getting the scroll progress indicator firing

--- a/vertical-progress-slider/index.html
+++ b/vertical-progress-slider/index.html
@@ -14,12 +14,40 @@
   <hr />
 
   <div class="vps">
-	<div class="vps__scrollbar">[ scrollbar ]</div>
+	<div class="vps__scrollbar-container">
+		<div class="vps__scrollbar-track">
+			<div class="vps__scrollbar"></div>
+		</div>
+	</div>
 	
 	<div class="vps__content">
 		<div class="vps__content-eyebrow">Our Offerings</div>
 		<div class="vps__content-scroll-area">
-			<h2>Premier Club Fitting Experience</h2>
+			<h2 style="margin: 0">Premier Club Fitting Experience</h2>
+			<p>Experience precision and instant gratification with our club fitting services. Enjoy on-site crafting, immediate testing, and expert fitters backed by advanced technology.</p>
+			<ul>
+				<li>100+ years of fitting experience.</li>
+				<li>On-site custom club crafting.</li>
+				<li>Immediate testing and adjustments.</li>
+				<li>Advanced technology: Quintic, Trackman, GEARS, Zen Green Stage.</li>
+				<li>Fittings for all club types.</li>
+			</ul>
+			<p>Experience precision and instant gratification with our club fitting services. Enjoy on-site crafting, immediate testing, and expert fitters backed by advanced technology.</p>
+			<ul>
+				<li>100+ years of fitting experience.</li>
+				<li>On-site custom club crafting.</li>
+				<li>Immediate testing and adjustments.</li>
+				<li>Advanced technology: Quintic, Trackman, GEARS, Zen Green Stage.</li>
+				<li>Fittings for all club types.</li>
+			</ul>
+			<p>Experience precision and instant gratification with our club fitting services. Enjoy on-site crafting, immediate testing, and expert fitters backed by advanced technology.</p>
+			<ul>
+				<li>100+ years of fitting experience.</li>
+				<li>On-site custom club crafting.</li>
+				<li>Immediate testing and adjustments.</li>
+				<li>Advanced technology: Quintic, Trackman, GEARS, Zen Green Stage.</li>
+				<li>Fittings for all club types.</li>
+			</ul>
 			<p>Experience precision and instant gratification with our club fitting services. Enjoy on-site crafting, immediate testing, and expert fitters backed by advanced technology.</p>
 			<ul>
 				<li>100+ years of fitting experience.</li>
